--- a/WebApplication1/frndly.csproj
+++ b/WebApplication1/frndly.csproj
@@ -167,6 +167,10 @@
     <Compile Include="Migrations\201506221428028_BirthDate.Designer.cs">
       <DependentUpon>201506221428028_BirthDate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201506230036269_Friends.cs" />
+    <Compile Include="Migrations\201506230036269_Friends.Designer.cs">
+      <DependentUpon>201506230036269_Friends.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -268,6 +272,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ChangeInterestsPartial.cshtml" />
     <Content Include="Views\Account\_ChangeImagePartial.cshtml" />
+    <Content Include="Views\Home\UserProfilePartial.cshtml" />
+    <Content Include="Views\Home\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -282,6 +288,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201506221428028_BirthDate.resx">
       <DependentUpon>201506221428028_BirthDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201506230036269_Friends.resx">
+      <DependentUpon>201506230036269_Friends.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
