--- a/WebApplication1/frndly.csproj
+++ b/WebApplication1/frndly.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Models\PostsModels.cs" />
     <Compile Include="Models\HomeViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Util.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -182,6 +183,7 @@
     <Content Include="Content\frndly.css" />
     <Content Include="Content\Images\frndlyLOGO.png" />
     <Content Include="Content\Images\JohnDoe.png" />
+    <Content Include="Content\null.txt" />
     <Content Include="favicon.ico" />
     <Content Include="Content\font-awesome\css\font-awesome.css" />
     <Content Include="Content\font-awesome\css\font-awesome.min.css" />
@@ -281,6 +283,8 @@
     <Content Include="Views\Posts\Edit.cshtml" />
     <Content Include="Views\Posts\Index.cshtml" />
     <Content Include="Views\Home\CreatePost.cshtml" />
+    <Content Include="Views\Shared\DeletePartial.cshtml" />
+    <Content Include="Views\Shared\EditPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
