--- a/WebApplication1/frndly.csproj
+++ b/WebApplication1/frndly.csproj
@@ -181,10 +181,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\frndly.css" />
+    <Content Include="Content\Images\favicon.ico" />
     <Content Include="Content\Images\frndlyLOGO.png" />
+    <Content Include="Content\Images\image.png" />
     <Content Include="Content\Images\JohnDoe.png" />
-    <Content Include="Content\null.txt" />
-    <Content Include="favicon.ico" />
     <Content Include="Content\font-awesome\css\font-awesome.css" />
     <Content Include="Content\font-awesome\css\font-awesome.min.css" />
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.svg" />
@@ -319,7 +319,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>10413</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:10155/</IISUrl>
+          <IISUrl>http://orginath47a6:10155/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
